# citadel-crud

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  system.rs
src/components/: creator.rs  deleter.rs  mod.rs  reader.rs  updater.rs
src/connections/: mod.rs  sqlite_connection.rs
tests/: creator_test.rs  integration_test.rs  reader_test.rs  testdb.sqlite
tests/common/: employee_creator.rs  employee_deleter.rs  employee_reader.rs  employee_updater.rs  mod.rs  schema.rs
