[package]
name = "citadel"
version = "0.1.0"
authors = ["Nathaniel Pisarski <nathanpisarski@gmail.com>"]
description = "Create tangible CRUD components for concern separation and dependency injection. Currently only works with SqlLite"

[dependencies]
diesel = { version = "1.0.0-beta1", features = ["sqlite"]}
diesel_infer_schema = { version = "1.0.0-beta1", features = ["sqlite"]}